# WildMagic5p17

./: CMakeLists.txt  README.md
LibCore/: LibCore_VC150.sln  LibCore_VC150.vcxproj  makefile.wm5  makeprj.wm5
LibCore/InputOutput/: Wm5FileIO.cpp
LibCore/Time/: Wm5Time.cpp
LibMathematics/: LibMathematics_VC100.vcxproj  LibMathematics_VC100.vcxproj.filters  LibMathematics_VC110.vcxproj  LibMathematics_VC120.vcxproj  LibMathematics_VC140.vcxproj  LibMathematics_VC150.sln  LibMathematics_VC150.vcxproj  LibMathematics_VC150.vcxproj.filters  Wm5Mathematics.h  makefile.wm5  makeprj.wm5
LibMathematics/Algebra/: Wm5APoint.cpp  Wm5APoint.h  Wm5AVector.cpp  Wm5AVector.h  Wm5HMatrix.cpp  Wm5HMatrix.h  Wm5HQuaternion.h  Wm5Quaternion.inl  Wm5TAPoint.h  Wm5TAVector.h  Wm5THMatrix.h  Wm5THPlane.h  Wm5THPoint.h  Wm5THQuaternion.h
LibMathematics/Base/: Wm5BitHacks.inl
cmake/: ExportWm5.cmake  Wm5Config.cmake.in
